chandeliers-lus/tests/fail/ui/tc/extern/missing-node.rs
chandeliers_lus::decl! {
    extern node missing() returns ();
}

fn main() {}
